# classification

./: README.md  pyproject.toml
notebooks/: KNN.ipynb  svm.ipynb
notebooks/decision_tree/: graph.ipynb  graphviz.ipynb  iris
